# pyside6_qtads

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  Windows.md  example.py  init.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
scripts/: custom-auditwheel.py  get-recent-releases.py  set-qt-constraint.py
src/: bindings.h  bindings.xml
support/: generate_pyi.py
