[metadata]
name = PySide6-QtAds
version = 4.0.1.1.dev0
description = PySide6 bindings to Qt Advanced Docking System
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL v2.1
platforms = any
url = https://github.com/mborgerson/pyside6_qtads/
keywords = PySide6, PySide, Qt, Advanced-Docking-System
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.7
setup_requires =
    cmake-build-extension
    setuptools

[options.packages.find]
where = src
